--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
     }
   },
   "dependencies": {
-    "bcrypt": "^2.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "eslint": "^7.24.0",
     "express": "^4.16.2",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
-    "mongodb": "^2.2.33",
+    "mongodb": "^3.6.6",
     "morgan": "^1.9.0",
-    "uws": "^9.14.0"
+    "nodemon": "^2.0.7",
+    "uws": "^200.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.9.0",
-    "nodemon": "^1.12.1"
+    "babel-preset-stage-0": "^6.24.1"
   },
   "author": "toan@tabvn.com",
   "license": "ISC"
