--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     # volumes:
     #   - ./node_modules
     #   - .:usr/app
-    command: npm run dev
+    command: npm start
         
 
   
